* examples: Added test_list_channels, test_list_faces, test_list_rib and
  test_register_route to query NFD.
* examples: In repo_ng added basic_insertion.py and watched_insertion.py to
  show interaction with the repo-ng repository.
* examples: Removed test_encode_decode_forwarding_entry and
  test_publish_async_ndnx because NDNx support is deprecated.

Deprecated
* Deprecated support for NDNx and binary XML. See WireFormat.ENABLE_NDNX above.
* In Face, deprecated registerPrefix where the onInterest callback has the form
  onInterest(prefix, interest, transport, interestFilterId). Use the
  registerPrefix where onInterest has the form
  onInterest(prefix, interest, face, interestFilterId, filter) so you can call
  face.putData().

Bug fixes
* http://redmine.named-data.net/issues/2478 Fix ProtobufTlv for Python 3.
* http://redmine.named-data.net/issues/2544 Fix test_chrono_chat bug affecting OS X 10.10.
* http://redmine.named-data.net/issues/2758 ControlParameters with empty name not properly encoded.

PyNDN v2.0beta3 (2015-02-03)
----------------------------

Changes
* http://redmine.named-data.net/issues/2388 Moved example programs from "tests" to "examples".
* In KeyChain.createIdentity, added an optional KeyParams argument.
* Unit tests: Added test-der-encode-decode tests for CertificateExtension.

Bug fixes
* http://redmine.named-data.net/issues/2472 Fixes to support Python 3

PyNDN v2.0beta2 (2014-12-23)
----------------------------

Changes
* Support getter and setter properties in the classes Interest, Data, MetaInfo,
  KeyLocator and ForwardingFlags, plus the internal ForwardingEntry and
  ControlParameters.
* In Name, support slice notation to call getSubName, e.g. name[2:4].
* Added ChronoSync2013 and test_chrono_chat.py.
* In Name, added wireEncode and wireDecode.
* In MetaInfo, added get/setFinalBlockId (replaces the deprecated get/setFinalBlockID).
* In MemoryContentCache, added unregisterAll.